fix login button alignament in responsive views

--- a/frontend-service/src/ui/views/_components/Layout/MainLayout/_components/Header/Header.module.scss
+++ b/frontend-service/src/ui/views/_components/Layout/MainLayout/_components/Header/Header.module.scss
@@ -15,6 +15,12 @@
   .customHeader {
     display: flex;
     padding: 0.5rem;
+    justify-content: space-between;
+    &.public {
+      @media (max-width: 768px) {
+        justify-content: flex-end;
+      }
+    }
     .title {
       display: flex;
       flex-direction: row;
